--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09cc21f1",
+   "id": "bd03995e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15621bfa",
+   "id": "0b220bfc",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acb8a66b",
+   "id": "83934cf7",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5772fb9b",
+   "id": "dba7f24a",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5f1f903e",
+   "id": "ed674081",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c80b3ce6",
+   "id": "3e2274ab",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c79590c",
+   "id": "c7737273",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bd8ad129",
+   "id": "c0e7cec5",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de61451e",
+   "id": "7f473c79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c851453e",
+   "id": "4633e636",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "24f57301",
+   "id": "c9f223e3",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a52d9d6f",
+   "id": "15567d58",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9d874f11",
+   "id": "97f6dd27",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "130a70ff",
+   "id": "35cb36bc",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "5683ef5b",
+   "execution_count": 91,
+   "id": "6be421fa",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
     "index = input(\"Enter an index: \")\n",
     "numberofindex = int(index)\n",
     "\n",
-    "if numberofindex > ((len(word))-1):\n",
+    "if numberofindex >= len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
     "else: print(f\"Index {numberofindex} of the word {word} is the letter {word[numberofindex]}\")"
    ]
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af78d39",
+   "id": "34f01a33",
    "metadata": {},
    "outputs": [],
    "source": []
