--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bd03995e",
+   "id": "c72b496d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0b220bfc",
+   "id": "e346c348",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83934cf7",
+   "id": "5b3bcc85",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dba7f24a",
+   "id": "8e77fe7c",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ed674081",
+   "id": "87bd7e8f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e2274ab",
+   "id": "0929bad8",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7737273",
+   "id": "8bc19ffd",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c0e7cec5",
+   "id": "081ac8c4",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f473c79",
+   "id": "b6a0f2b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4633e636",
+   "id": "bc4cddf2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c9f223e3",
+   "id": "96c3f429",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "15567d58",
+   "id": "94a55460",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "97f6dd27",
+   "id": "af720e04",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "35cb36bc",
+   "id": "5214e32a",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "6be421fa",
+   "execution_count": 93,
+   "id": "bf4e228d",
    "metadata": {},
    "outputs": [
     {
@@ -309,17 +309,25 @@
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
-    "numberofindex = int(index)\n",
+    "index = int(index)\n",
     "\n",
     "if numberofindex >= len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
-    "else: print(f\"Index {numberofindex} of the word {word} is the letter {word[numberofindex]}\")"
+    "else: print(f\"Index {index} of the word {word} is the letter {word[index]}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f01a33",
+   "id": "31968db4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992c1432",
    "metadata": {},
    "outputs": [],
    "source": []
