--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5296bac5",
+   "id": "58e050a1",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a1925816",
+   "id": "a727d2d2",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5b11e2ef",
+   "id": "489bd02f",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8c2e53ed",
+   "id": "8548411c",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "9c63bbac",
+   "id": "37ae52d8",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "0e066c5d",
+   "id": "40a39bbb",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "cc82abf1",
+   "id": "5a73a1f1",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "2efd48d4",
+   "id": "34ef50f7",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d58c5c31",
+   "id": "83b04347",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "bea1200b",
+   "id": "5d0ddff0",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "2f94fd4f",
+   "id": "9e757579",
    "metadata": {},
    "outputs": [
     {
@@ -568,15 +568,16 @@
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
     "index = input('Enter a number: ')\n",
-    "index = in\n",
+    "index = int(index)\n",
     "if index < 0:\n",
-    "    print('index 5 in \\'pineapple\\' is \\'p\\'')"
+    "    print('index 5 in \\'pineapple\\' is \\'p\\'')\n",
+    "elif index >= len()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac85d4c",
+   "id": "93e4da91",
    "metadata": {},
    "outputs": [],
    "source": []
