--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9e7d3037",
+   "id": "135930ce",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fdfa60a",
+   "id": "cd68bfa1",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4fcd15de",
+   "id": "0f5b83aa",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "744c1de3",
+   "id": "f23521a6",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2da6b3b",
+   "id": "a5c31a79",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e0ece9d4",
+   "id": "13c9bb2d",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a967b228",
+   "id": "1488a940",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5a783112",
+   "id": "79ff2c0a",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bbe340e3",
+   "id": "976a7d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "450b8e19",
+   "id": "940d6050",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7042447",
+   "id": "65347317",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fb74fa76",
+   "id": "c964e5e6",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f4543c8",
+   "id": "78239302",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1d11a9bf",
+   "id": "90a4fd16",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc50677",
+   "id": "0044616f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f5a766c8",
+   "id": "311ab938",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dbf32462",
+   "id": "f89a4ed3",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7a91c569",
+   "id": "30b23434",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "be62353f",
+   "id": "cc878715",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e83d85ba",
+   "id": "80839766",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d6d75b23",
+   "id": "aabf3493",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d1ae832d",
+   "id": "31b8d3c0",
    "metadata": {},
    "outputs": [
     {
@@ -438,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "232f9024",
+   "execution_count": 51,
+   "id": "9149df7a",
    "metadata": {},
    "outputs": [
     {
@@ -447,18 +447,8 @@
      "output_type": "stream",
      "text": [
       "Enter the string: pineapple\n",
-      "Enter the numeric index: 4\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m :\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mError: numeric index \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is too low\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mnum\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mstring\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m :\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mError: numeric index \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is too low\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'list'"
+      "Enter the numeric index: 4\n",
+      "Index 4 in \"pineapple\" is \"a\"\n"
      ]
     }
    ],
@@ -468,8 +458,8 @@
     "num = int(num)\n",
     "if num < 0 :\n",
     "    print(f'Error: numeric index {num} is too low')\n",
-    "elif num > [len(s :\n",
-    "    print(f'Error: numeric index {num} is too low')\n",
+    "elif num >= len(string) :\n",
+    "    print(f'Error: numeric index {num} is too high')\n",
     "else:\n",
     "    print(f'Index {num} in \"{string}\" is \"{string[num]}\"')\n",
     "    \n",
@@ -479,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1750a4c",
+   "id": "895b57d4",
    "metadata": {},
    "outputs": [],
    "source": []
