--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "58e050a1",
+   "id": "b1f1ad06",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a727d2d2",
+   "id": "0f462ea6",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "489bd02f",
+   "id": "a4dea165",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8548411c",
+   "id": "d617da95",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "37ae52d8",
+   "id": "73833cde",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "40a39bbb",
+   "id": "f4da069a",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5a73a1f1",
+   "id": "0c80a249",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "34ef50f7",
+   "id": "3a60077e",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "83b04347",
+   "id": "12512ea4",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5d0ddff0",
+   "id": "70604da0",
    "metadata": {},
    "outputs": [
     {
@@ -540,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "9e757579",
+   "execution_count": 114,
+   "id": "6d6eec27",
    "metadata": {},
    "outputs": [
     {
@@ -550,17 +550,6 @@
      "text": [
       "Enter a word: pineapple\n",
       "Enter a number: 5\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'pineapple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[112], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m word \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a word: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m s[x]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'pineapple'"
      ]
     }
    ],
@@ -571,13 +560,14 @@
     "index = int(index)\n",
     "if index < 0:\n",
     "    print('index 5 in \\'pineapple\\' is \\'p\\'')\n",
-    "elif index >= len()"
+    "elif index >= len(word):\n",
+    "    print('100 is too big, and beyond the index for pineapple')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e4da91",
+   "id": "fbb3a9a6",
    "metadata": {},
    "outputs": [],
    "source": []
